--- a/bingo.html
+++ b/bingo.html
@@ -3,17 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bingo Board</title>
+  <title>Stylized Bingo Board</title>
   <style>
-    /* Style for the Bingo board container */
+    /* Center container for the entire layout */
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      background-color: #f8f9fa;
+      font-family: Arial, sans-serif;
+    }
+
+    .container {
+      text-align: center;
+    }
+
+    /* Bingo board styles */
     .bingo-board {
       display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: repeat(5, 1fr);
-      width: 300px;
-      height: 300px;
-      gap: 5px;
-      margin: 20px auto;
+      grid-template-columns: repeat(5, 60px);
+      grid-template-rows: repeat(5, 60px);
+      gap: 10px;
+      margin: 20px 0;
+      padding: 10px;
+      background-color: #e9ecef;
+      border-radius: 12px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     /* Style for each cell */
@@ -23,54 +40,65 @@
       justify-content: center;
       font-size: 1.5rem;
       background-color: #f1f1f1;
-      border: 1px solid #ccc;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s;
       color: #333;
+      transition: background-color 0.3s, transform 0.2s;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Hover effect */
+    .bingo-cell:hover {
+      background-color: #dee2e6;
+      transform: scale(1.05);
     }
 
     /* Style when cell is clicked */
     .bingo-cell.active {
-      background-color: #333;
+      background-color: #007bff;
       color: white;
+      box-shadow: 0 4px 8px rgba(0, 123, 255, 0.3);
     }
 
-    /* Style for the BINGO title */
+    /* BINGO title below the board */
     .bingo-title {
-      text-align: center;
-      font-size: 3rem;
-      font-weight: bold;
-      color: #333;
       display: flex;
       justify-content: center;
-      gap: 10px;
+      gap: 8px;
+      font-size: 3rem;
+      font-weight: bold;
+      color: #343a40;
       margin-top: 20px;
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     }
 
     /* Initial color for each letter */
     .bingo-letter {
-      color: #333;
-      transition: color 0.3s;
+      transition: color 0.3s, text-shadow 0.3s;
     }
 
     /* Selected color */
     .selected-color {
-      color: #ff5733; /* Change this color as desired */
+      color: #ff5733;
+      text-shadow: 2px 2px 6px rgba(255, 87, 51, 0.7);
     }
   </style>
 </head>
 <body>
 
-  <!-- Bingo board container -->
-  <div class="bingo-board" id="bingoBoard"></div>
+  <!-- Center container -->
+  <div class="container">
+    <!-- Bingo board container -->
+    <div class="bingo-board" id="bingoBoard"></div>
 
-  <!-- BINGO title below the board -->
-  <div class="bingo-title">
-    <span class="bingo-letter" id="letter-B">B</span>
-    <span class="bingo-letter" id="letter-I">I</span>
-    <span class="bingo-letter" id="letter-N">N</span>
-    <span class="bingo-letter" id="letter-G">G</span>
-    <span class="bingo-letter" id="letter-O">O</span>
+    <!-- BINGO title below the board -->
+    <div class="bingo-title">
+      <span class="bingo-letter" id="letter-B">B</span>
+      <span class="bingo-letter" id="letter-I">I</span>
+      <span class="bingo-letter" id="letter-N">N</span>
+      <span class="bingo-letter" id="letter-G">G</span>
+      <span class="bingo-letter" id="letter-O">O</span>
+    </div>
   </div>
 
   <script>
@@ -158,7 +186,7 @@
         completedLines += 1;
       }
     }
-
+ 
     // Generate the Bingo board on page load
     generateBingoBoard();
   </script>
