--- a/bingo.html
+++ b/bingo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stylized Bingo Board</title>
+  <title>Stylized Bingo Board with Celebration</title>
   <style>
-    /* Center container for the entire layout */
+    /* Basic styles */
     body {
       display: flex;
       align-items: center;
@@ -20,7 +20,6 @@
       text-align: center;
     }
 
-    /* Bingo board styles */
     .bingo-board {
       display: grid;
       grid-template-columns: repeat(5, 60px);
@@ -33,7 +32,6 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    /* Style for each cell */
     .bingo-cell {
       display: flex;
       align-items: center;
@@ -47,20 +45,17 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-    /* Hover effect */
     .bingo-cell:hover {
       background-color: #dee2e6;
       transform: scale(1.05);
     }
 
-    /* Style when cell is clicked */
     .bingo-cell.active {
       background-color: #007bff;
       color: white;
       box-shadow: 0 4px 8px rgba(0, 123, 255, 0.3);
     }
 
-    /* BINGO title below the board */
     .bingo-title {
       display: flex;
       justify-content: center;
@@ -72,26 +67,119 @@
       text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     }
 
-    /* Initial color for each letter */
     .bingo-letter {
       transition: color 0.3s, text-shadow 0.3s;
     }
 
-    /* Selected color */
     .selected-color {
       color: #ff5733;
       text-shadow: 2px 2px 6px rgba(255, 87, 51, 0.7);
+    }
+
+    /* Enhanced Celebration Popup */
+    .celebration-popup {
+      display: none; /* Hidden by default */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      align-items: center;
+      justify-content: center;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    .popup-content {
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      font-size: 2.5rem;
+      color: #343a40;
+      animation: popupBounce 0.4s ease;
+    }
+
+    @keyframes popupBounce {
+      0% { transform: scale(0.8); opacity: 0; }
+      60% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); }
+    }
+
+    .popup-content h2 {
+      margin: 0;
+      font-size: 2.5rem;
+      color: #28a745;
+      text-shadow: 2px 2px 8px rgba(40, 167, 69, 0.7);
+    }
+
+    .popup-content p {
+      font-size: 1.2rem;
+      color: #555;
+      margin-top: 10px;
+    }
+
+    .popup-content button {
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 1.2rem;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .popup-content button:hover {
+      background-color: #0056b3;
+    }
+
+    /* Celebration Confetti */
+    .confetti {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+      overflow: hidden;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+
+    .confetti div {
+      position: absolute;
+      width: 10px;
+      height: 20px;
+      background-color: #ff5733;
+      opacity: 0.8;
+      transform-origin: left;
+      animation: fall 1s linear infinite;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: rotate(0deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Center container -->
   <div class="container">
-    <!-- Bingo board container -->
     <div class="bingo-board" id="bingoBoard"></div>
-
-    <!-- BINGO title below the board -->
     <div class="bingo-title">
       <span class="bingo-letter" id="letter-B">B</span>
       <span class="bingo-letter" id="letter-I">I</span>
@@ -101,11 +189,22 @@
     </div>
   </div>
 
-  <script>
-    let completedLines = 0; // Track completed rows/columns/diagonals
-    const lineChecks = { rows: {}, columns: {}, diagonals: {} }; // To avoid duplicate checks
+  <!-- Celebration Popup -->
+  <div class="celebration-popup" id="celebrationPopup">
+    <div class="popup-content">
+      <h2>🎉 Bingo Completed! 🎉</h2>
+      <p>Congratulations! You completed a Bingo line.</p>
+      <button onclick="closePopup()">Close</button>
+    </div>
+  </div>
 
-    // Function to shuffle an array
+  <!-- Confetti Animation -->
+  <div class="confetti" id="confetti"></div>
+
+  <script>
+    let completedLines = 0;
+    const lineChecks = { rows: {}, columns: {}, diagonals: {} };
+
     function shuffle(array) {
       for (let i = array.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
@@ -114,17 +213,11 @@
       return array;
     }
 
-    // Function to generate the Bingo board with shuffled numbers from 1 to 25
     function generateBingoBoard() {
       const bingoBoard = document.getElementById("bingoBoard");
-
-      // Clear the board if it's not empty
       bingoBoard.innerHTML = "";
-
-      // Create an array of numbers from 1 to 25 and shuffle it
       const numbers = shuffle(Array.from({ length: 25 }, (_, i) => i + 1));
 
-      // Loop through the shuffled numbers to create cells
       numbers.forEach((number, index) => {
         const cell = document.createElement("div");
         cell.className = "bingo-cell";
@@ -138,56 +231,75 @@
       });
     }
 
-    // Function to activate cell and check for a completed row/column/diagonal
     function activateCell(cell, index) {
       cell.classList.add("active");
       checkBingoCondition(index);
     }
 
-    // Function to check for completed rows, columns, or diagonals
     function checkBingoCondition(index) {
       const cells = document.querySelectorAll(".bingo-cell");
       const row = Math.floor(index / 5);
       const col = index % 5;
 
-      // Check row if not already marked
       if (!lineChecks.rows[row] && [0, 1, 2, 3, 4].every(i => cells[row * 5 + i].classList.contains("active"))) {
         lineChecks.rows[row] = true;
         updateBingoTitle();
       }
 
-      // Check column if not already marked
       if (!lineChecks.columns[col] && [0, 5, 10, 15, 20].every(i => cells[col + i].classList.contains("active"))) {
         lineChecks.columns[col] = true;
         updateBingoTitle();
       }
 
-      // Check main diagonal if not already marked
       if (!lineChecks.diagonals.main && [0, 6, 12, 18, 24].every(i => cells[i].classList.contains("active"))) {
         lineChecks.diagonals.main = true;
         updateBingoTitle();
       }
 
-      // Check anti-diagonal if not already marked
       if (!lineChecks.diagonals.anti && [4, 8, 12, 16, 20].every(i => cells[i].classList.contains("active"))) {
         lineChecks.diagonals.anti = true;
         updateBingoTitle();
       }
     }
 
-    // Function to change the color of each letter in "BINGO" based on completed lines
     function updateBingoTitle() {
-      const bingoLetters = ["letter-B", "letter-I", "letter-N", "letter-G", "letter-O"];
-      
-      // Change color of the next letter only if it hasn’t been changed yet
-      if (completedLines < bingoLetters.length) {
-        const letter = document.getElementById(bingoLetters[completedLines]);
-        letter.classList.add("selected-color");
-        completedLines += 1;
+      const bingoLetters = document.querySelectorAll(".bingo-letter");
+      bingoLetters[completedLines].classList.add("selected-color");
+      completedLines++;
+
+      if (completedLines === 5) {
+        showCelebrationPopup();
       }
     }
- 
-    // Generate the Bingo board on page load
+
+    function showCelebrationPopup() {
+      const celebrationPopup = document.getElementById("celebrationPopup");
+      celebrationPopup.style.display = "flex";
+      startConfetti();
+    }
+
+    function closePopup() {
+      document.getElementById("celebrationPopup").style.display = "none";
+      stopConfetti();
+    }
+
+    function startConfetti() {
+      const confettiContainer = document.getElementById("confetti");
+      confettiContainer.innerHTML = "";
+
+      for (let i = 0; i < 50; i++) {
+        const confetti = document.createElement("div");
+        confetti.style.left = `${Math.random() * 100}vw`;
+        confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
+        confetti.style.animationDuration = `${Math.random() * 2 + 2}s`;
+        confettiContainer.appendChild(confetti);
+      }
+    }
+
+    function stopConfetti() {
+      document.getElementById("confetti").innerHTML = "";
+    }
+
     generateBingoBoard();
   </script>
 
